--- a/PBL2_Project/PBL2_Project.vcxproj
+++ b/PBL2_Project/PBL2_Project.vcxproj
@@ -123,10 +123,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Publisher.cpp" />
+    <ClCompile Include="PublisherManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="game.h" />
+    <ClInclude Include="publisher.h" />
+    <ClInclude Include="PublisherManager.h" />
     <ClInclude Include="stack.h" />
+    <ClInclude Include="utils.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="games.txt" />
+    <Text Include="publishers.txt" />
+    <Text Include="users.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
