--- a/PBL2_Project/PBL2_Project.vcxproj
+++ b/PBL2_Project/PBL2_Project.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -102,6 +102,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,6 +141,18 @@
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="data\games\games.txt" />
+    <Text Include="data\publishers\P1.txt" />
+    <Text Include="data\publishers\P10.txt" />
+    <Text Include="data\publishers\P11.txt" />
+    <Text Include="data\publishers\P2.txt" />
+    <Text Include="data\publishers\P3.txt" />
+    <Text Include="data\publishers\P4.txt" />
+    <Text Include="data\publishers\P5.txt" />
+    <Text Include="data\publishers\P6.txt" />
+    <Text Include="data\publishers\P7.txt" />
+    <Text Include="data\publishers\P8.txt" />
+    <Text Include="data\publishers\P9.txt" />
     <Text Include="data\publishers\publishers.txt" />
     <Text Include="publishers_out.txt" />
     <Text Include="Temp.txt" />
